; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_renderer_discovery.c_vlc_rd_probe_add.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_renderer_discovery.c_vlc_rd_probe_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_rd_probe = type { i32*, i32*, i32, i32 }

@VLC_ENOMEM = common dso_local global i32 0, align 4
@VLC_PROBE_CONTINUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_rd_probe_add(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.vlc_rd_probe, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = getelementptr inbounds %struct.vlc_rd_probe, %struct.vlc_rd_probe* %8, i32 0, i32 0
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @strdup(i8* %10)
  %12 = sext i32 %11 to i64
  %13 = inttoptr i64 %12 to i32*
  store i32* %13, i32** %9, align 8
  %14 = getelementptr inbounds %struct.vlc_rd_probe, %struct.vlc_rd_probe* %8, i32 0, i32 1
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @strdup(i8* %15)
  %17 = sext i32 %16 to i64
  %18 = inttoptr i64 %17 to i32*
  store i32* %18, i32** %14, align 8
  %19 = getelementptr inbounds %struct.vlc_rd_probe, %struct.vlc_rd_probe* %8, i32 0, i32 2
  store i32 0, i32* %19, align 8
  %20 = getelementptr inbounds %struct.vlc_rd_probe, %struct.vlc_rd_probe* %8, i32 0, i32 3
  store i32 0, i32* %20, align 4
  %21 = getelementptr inbounds %struct.vlc_rd_probe, %struct.vlc_rd_probe* %8, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %32, label %24

24:                                               ; preds = %3
  %25 = getelementptr inbounds %struct.vlc_rd_probe, %struct.vlc_rd_probe* %8, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = icmp eq i32* %26, null
  br i1 %27, label %32, label %28

28:                                               ; preds = %24
  %29 = load i32*, i32** %5, align 8
  %30 = call i64 @vlc_probe_add(i32* %29, %struct.vlc_rd_probe* %8, i32 24)
  %31 = icmp ne i64 %30, 0
  br label %32

32:                                               ; preds = %28, %24, %3
  %33 = phi i1 [ true, %24 ], [ true, %3 ], [ %31, %28 ]
  %34 = zext i1 %33 to i32
  %35 = call i64 @unlikely(i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %45

37:                                               ; preds = %32
  %38 = getelementptr inbounds %struct.vlc_rd_probe, %struct.vlc_rd_probe* %8, i32 0, i32 1
  %39 = load i32*, i32** %38, align 8
  %40 = call i32 @free(i32* %39)
  %41 = getelementptr inbounds %struct.vlc_rd_probe, %struct.vlc_rd_probe* %8, i32 0, i32 0
  %42 = load i32*, i32** %41, align 8
  %43 = call i32 @free(i32* %42)
  %44 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %44, i32* %4, align 4
  br label %47

45:                                               ; preds = %32
  %46 = load i32, i32* @VLC_PROBE_CONTINUE, align 4
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %45, %37
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32 @strdup(i8*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @vlc_probe_add(i32*, %struct.vlc_rd_probe*, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
